# vibe-coding-1-ukoly

./: .gitignore  README.md
01-python-skript-pro-llm-api/: .env.example  CLAUDE.md  README.md  main.py
02-nastaveni-kodovaciho-agenta/: README.md
02-nastaveni-kodovaciho-agenta/.claude/: settings.json
02-nastaveni-kodovaciho-agenta/.claude/agents/: page-summarizer.md  repo-doctor.md
02-nastaveni-kodovaciho-agenta/.claude/commands/: caveman.md
02-nastaveni-kodovaciho-agenta/.claude/skills/caveman/: SKILL.md
02-nastaveni-kodovaciho-agenta/scripts/: audit.sh
agentic-engineering-01-sdk/: AGENTS.md  README.md  hitl.py  main.py  mcp_server.py  pyproject.toml  stage_diagnose.py  stage_document.py  stage_intake.py  stage_resolve.py  stage_review.py  stage_triage.py  tools.py
agentic-engineering-01-sdk/data/: kb.json  status.json  tickets.json
